# AgentDuels

./: .gitignore  Cargo.toml  README.md
assets/models/: player.bbmodel  player0.gltf  player1.gltf
assets/models/items/: Arrow.bbmodel  Arrow.gltf  Block.bbmodel  Block.gltf  Bow.bbmodel  Bow.gltf  GoldenApple.bbmodel  GoldenApple.gltf  Pickaxe.bbmodel  Pickaxe.gltf  Sword.bbmodel  Sword.gltf
example_client/: client.py  requirements.txt
headless/: Cargo.toml  README
headless/src/: main.rs
protocol/: Cargo.toml
protocol/macros/: Cargo.toml
protocol/macros/src/: lib.rs
protocol/src/: lib.rs  packets.rs
server/: Cargo.toml
server/src/: game_server.rs  main.rs
src/: client.rs  lib.rs  main.rs  networking.rs  player.rs  states.rs  world.rs
src/states/: end_menu.rs  game.rs  joining.rs  main_menu.rs
src/states/game/: gameloop.rs  mod.rs  network.rs  player.rs  world.rs
wrappers/python/: pyproject.toml
wrappers/python/agentduels/: __init__.py
