[package]
name = "agentduels"
version = "0.1.0"
edition = "2024"

[dependencies]
agentduels_protocol.workspace = true
anyhow.workspace = true
avian3d = "0.4.0"
bevy = "0.17.2"
blake3 = "1.8.2"
postcard.workspace = true
rand.workspace = true
serde.workspace = true
serde_json = "1.0.145"
tokio.workspace = true

[workspace]
resolver = "2"
members = ["headless","protocol", "server"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
agentduels_protocol = { path = "protocol" }
anyhow = "1.0.100"
postcard = { version = "1.1.3", features = ["alloc"], default-features = false }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
