[package]
name = "agentduels"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
avian3d = { git = "https://github.com/Cheezer1656/avian", default-features = false, features = ["3d", "f32", "default-collider", "parry-f32", "simd", "xpbd_joints"] }
bevy = "0.18.0"
bevy-inspector-egui = "0.36.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tungstenite = "0.28.0"
postcard = { version = "1.1.3", features = ["alloc"], default-features = false }
workflow-websocket = "0.18.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
fastrand = "2.3.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
